--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,5 +21,6 @@
 }
 
 body {
-  background-color: var(--color-background);
+  /* background-image: radial-gradient(circle at 28% 93%, rgba(2, 2, 2, 0.04) 0%, rgba(2, 2, 2, 0.04) 50%, rgba(223, 223, 223, 0.04) 50%, rgba(223, 223, 223, 0.04) 100%), radial-gradient(circle at 13% 75%, rgba(185, 185, 185, 0.04) 0%, rgba(185, 185, 185, 0.04) 50%, rgba(25, 25, 25, 0.04) 50%, rgba(25, 25, 25, 0.04) 100%), radial-gradient(circle at 79% 39%, rgba(34, 34, 34, 0.04) 0%, rgba(34, 34, 34, 0.04) 50%, rgba(57, 57, 57, 0.04) 50%, rgba(57, 57, 57, 0.04) 100%), linear-gradient(56deg, rgb(12, 11, 43), rgb(12, 11, 43)); */
+  background: linear-gradient(to right, #1A1E4F 0%, #0C0B2B 85%);
 }
