--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,9 @@
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
 
+body {
+  overflow-x: hidden;
+}
 
 
 @theme {
