--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,23 +39,23 @@ body {
 
 @keyframes floating {
   0% {
-    transform: translate(0, 0) rotate(0deg);
+    transform: translate(0, 0);
   }
 
   25% {
-    transform: translate(3px, -3px) rotate(90deg);
+    transform: translate(3px, -3px);
   }
 
   50% {
-    transform: translate(-3px, 3px) rotate(180deg);
+    transform: translate(-3px, 3px);
   }
 
   75% {
-    transform: translate(3px, 3px) rotate(270deg);
+    transform: translate(3px, 3px);
   }
 
   100% {
-    transform: translate(0, 0) rotate(360deg);
+    transform: translate(0, 0);
   }
 }
 
